@@ -11,6 +11,7 @@ usability/reusablity.
 * Added two more test reference RTF files.
 * Updated section unit tests.
 * Removed Paragraph from Elements.
+* Added the next reference RTF file and finished up the last section test.
 
 2008.02.27
 
